--- a/airflow/templates/deployment-scheduler.yaml
+++ b/airflow/templates/deployment-scheduler.yaml
@@ -3,59 +3,38 @@ kind: Deployment
 metadata:
   name: {{ include "airflow.fullname" . }}-scheduler
   labels:
-    app.kubernetes.io/name: {{ include "airflow.name" . }}-scheduler
+    app.kubernetes.io/name: {{ include "airflow.name" . }}
     helm.sh/chart: {{ include "airflow.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/component: scheduler
 spec:
-  #replicas: {{ .Values.replicaCount }}
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "airflow.name" . }}-scheduler
+      app.kubernetes.io/name: {{ include "airflow.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
+      app.kubernetes.io/component: scheduler
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "airflow.name" . }}-scheduler
+        app.kubernetes.io/name: {{ include "airflow.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/component: scheduler
     spec:
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.airflow.image.repository }}:{{ .Values.airflow.image.tag }}"
           imagePullPolicy: {{ .Values.airflow.image.pullPolicy }}
-          #envFrom:
-          #  - configMapRef:
-          #      name: "{{ template "airflow.fullname" . }}-env"
+          envFrom:
+            - configMapRef:
+                name: {{ template "airflow.fullname" . }}
           #env:
           #  - name: POSTGRES_USER
           #    valueFrom:
           #      secretKeyRef:
           #        name: {{ template "airflow.fullname" . }}
           #        key: postgresUsername
-          env:
-            - name: LOAD_EX
-              value: "y"
-            - name: EXECUTOR
-              value: Celery
-            - name: FERNET_KEY
-              value: {{ .Values.airflow.fernetKey }}
-            - name: POSTGRES_USER
-              value: {{ .Values.postgresql.postgresqlUsername }}
-            - name: POSTGRES_PASSWORD
-              value: {{ .Values.postgresql.postgresqlPassword }}
-            - name: POSTGRES_DB
-              value: {{ .Values.postgresql.postgresqlDatabase }}
-            - name: POSTGRES_HOST
-              value: "{{ template "airflow.postgresql.fullname" . }}"
-            - name: POSTGRES_PORT
-              value: "{{ .Values.postgresql.servicePort }}"
-            - name: REDIS_HOST
-              value: "{{ template "airflow.redis.fullname" .}}"
-            - name: REDIS_PORT
-              value: "6379"
-            - name: REDIS_PASSWORD
-              value: "redispass"
           args:
             - "bash"
             - "-c"
